# buildkit

./: README.md  pyproject.toml
buildkit/: __init__.py  args.py  builder.py  cmds.py  const.py  humanhash.py  manifest.py  ninja_syntax.py  project.py  registry.py  target.py  utils.py
